Refactor base site

--- a/shows.htm
+++ b/shows.htm
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<!-- saved from url=(0034)https://lilyblossom.neocities.org/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Wet Cigarette</title>
-	<link rel="stylesheet" type="text/css" href="./files/lily.css" title="Wet Cigarette">
-</head>
-<body>
-<div class="page">
+<html>
 
-	<header>
-		<h2>Wet Cigarette</h2>
-	</header>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title>Wet Cigarette</title>
+		<link rel="stylesheet" type="text/css" href="./files/wetcig.css" title="Wet Cigarette">
 
-	<div class="main">
-		<nav>
-			<script type="text/javascript" src="./files/js-nav.js"></script>
-		</nav>
-		<div class="content">
-			<div class="info">
-				<p>Live Music, Sometimes</p>
+	</head>
+
+	<body>
+		<div class="page">
+			<header>
+				<h2>Wet Cigarette</h2>
+			</header>
+			<div class="main">
+				<nav>
+					<script type="text/javascript" src="./files/js-nav.js"></script>
+				</nav>
+				<div class="content">
+					<div class="info">
+						<p>Live Music, Sometimes</p>
+					</div>
+				</div>
 			</div>
+			<footer>
+				<script type="text/javascript" src="./files/js-footer.js"></script><a href="http://homeandlearn.co.uk/WD/WebDesign.html"><img src="./files/html.gif" alt="[Learn HTML now!]" title="Learn HTML Now!"></a><a
+					href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./files/css.gif" alt="[Made with Cascading Style Sheets]" title="Made with Cascading Style Sheets"></a><img src="./files/windowsbutton.gif" alt="[Made with Windows]"
+					title="Made with Windows"><a href="https://www.neocities.org/"><img src="./files/neocities.gif" alt="[Hosted by NeoCities. Get your own free website today!]" title="Hosted by NeoCities. Get your own free website today!"></a><a
+					href="https://anlucas.neocities.org/88x31Buttons.html"><img src="./files/icongallery.gif" alt="[88x31 Pixel Icon Gallery]" title="88x31 Pixel Icon Gallery"></a><a href="http://notepad-plus-plus.org/"><img src="./files/notepadpp.gif"
+						alt="[Made with Notepad++]" title="Made with Notepad++"></a><a href="http://www.anybrowser.org/campaign/"><img src="./files/anybrowser2.gif" alt="[Best Viewed with Any Browser]" title="Best Viewed with Any Browser"></a>
+				<br><br>
+			</footer>
 		</div>
-	</div>
+	</body>
 
-
-
-	<footer>
-		<script type="text/javascript" src="./files/js-footer.js"></script><a href="http://homeandlearn.co.uk/WD/WebDesign.html"><img src="./files/html.gif" alt="[Learn HTML now!]" title="Learn HTML Now!"></a><a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./files/css.gif" alt="[Made with Cascading Style Sheets]" title="Made with Cascading Style Sheets"></a><img src="./files/windowsbutton.gif" alt="[Made with Windows]" title="Made with Windows"><a href="https://www.neocities.org/"><img src="./files/neocities.gif" alt="[Hosted by NeoCities. Get your own free website today!]" title="Hosted by NeoCities. Get your own free website today!"></a><a href="https://anlucas.neocities.org/88x31Buttons.html"><img src="./files/icongallery.gif" alt="[88x31 Pixel Icon Gallery]" title="88x31 Pixel Icon Gallery"></a><a href="http://notepad-plus-plus.org/"><img src="./files/notepadpp.gif" alt="[Made with Notepad++]" title="Made with Notepad++"></a><a href="http://www.anybrowser.org/campaign/"><img src="./files/anybrowser2.gif" alt="[Best Viewed with Any Browser]" title="Best Viewed with Any Browser"></a><!--<br><br>
-	</footer>
-
-</div>
-
-
-
-    </body></html>
+</html>
