Update non-index pages

--- a/contact.htm
+++ b/contact.htm
@@ -19,6 +19,8 @@
 					<div class="info">
 						<p>Live Music, Sometimes</p>
 					</div>
+					<p><em>Email us at <a href="mailto:w3cigarette@gmail.com">w3tcigarette@gmail.com</a>, or send our facebook page a message:</em></p>
+					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fwetcigarette%2F&tabs=contact&width=500&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 				</div>
 			</div>
 			<footer>
