--- a/gallery.htm
+++ b/gallery.htm
@@ -20,6 +20,12 @@
 					<div class="info">
 						<p>Live Music, Sometimes</p>
 					</div>
+					<img src="./files/pix/1.jpg" width=100% alt="Wet Cigarette!" title="Wet Cigarette!">
+					<img src="./files/pix/2.jpg" width=100% alt="Wet Cigarette!" title="Wet Cigarette!">
+					<img src="./files/pix/3.jpg" width=100% alt="Wet Cigarette!" title="Wet Cigarette!">
+					<img src="./files/pix/4.jpg" width=100% alt="Wet Cigarette!" title="Wet Cigarette!">
+					<img src="./files/pix/5.jpg" width=100% alt="Wet Cigarette!" title="Wet Cigarette!">
+					<img src="./files/pix/6.jpg" width=100% alt="Wet Cigarette!" title="Wet Cigarette!">
 				</div>
 			</div>
 			<footer>
