--- a/shows.htm
+++ b/shows.htm
@@ -21,6 +21,7 @@
 					<div class="info">
 						<p>Live Music, Sometimes</p>
 					</div>
+					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fwetcigarette%2F&tabs=events&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 				</div>
 			</div>
 			<footer>
