--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,54 @@
 					<h1>Wot Sigrut</h1>
 					<p class="date">September 10, 2060</p>
 					<p>The year is 2060, and all you have left is moist tobacco and punk music...</p>
+					<p>
+						personal favourite so far: Wet Cigarette plays punk rock music in Victoria BC. They are well known for aggressive, entertaining shows, spontaneous road trips and selling out their shows. They enjoy all genres and genres of music. They play a mix of drums, guitar, bass, voice and can also sing. They have played in several public and private parties across Canada and have performed at many punk rock and metal festivals and amateur heavy metal shows. They have toured the United States, England, Germany, Belgium, Austria, Switzerland, Italy, Finland and now have a Facebook page. They started the band in 2000, but have not had the opportunity to tour as yet, so it would be nice to support them and see them back on the road and play a show here in Victoria BC. Thank you.
+
+						"Wet Cigarette is a punk band from Victora, BC, Canada. They recently released their EP "Avalanche Dreamers" and are dedicated to low vocals and low guitars. Check out these lyrics, how they apply to our world and our situation. "Bored, uptight, depressed/Bored, uptight, depressed/Hated and hate, just go with me/ Bored, uptight, depressed/Bored, uptight, depressed/Hate, just go with me."
+
+
+						"I usually don't use a lot of lyrics, but I think I've tried to be as explicit as possible. This song is pretty messed up and very, very fucked up, in a way that has a lot to do with our atmosphere and our perspective"
+
+
+						Wet Cigarette is a cool band from victoria BC. They play punk music for the little people. They have been around since October of 2008. This is a great band to see at some punk shows, galleries, festivals, coffee shops, etc.
+
+
+						the rules:
+
+						-don't stop a show for them
+
+						-don't get suspended
+
+						-don't get fucked up on copious amounts of medication
+
+						-don't be a dick
+
+
+						tho they have set times for their shows. they often play multiple times in a night, so use that to your advantage if you have a favor to ask them.
+
+
+						curb riding bc you see? make your own
+
+
+						find out more at
+
+						breastboobies.com
+
+
+						Wet Cigarette is a punk band from Victora, BC and their music style is raw, aggressive, no-holds-barred… No fuck that. For these three crazy kids, the war is real.
+
+						Starting in October 2012 the band released their debut album Smoke With Fire. A blistering 5-track affair with a thick crust crusty crustcore crust and equal parts race car, Marcellus Jackson, and modern metal, original-black-metal inspired vocals, jarring country charm, fuzzy riffs and dramatic rock and roll rhythms, as well as some nod to folk, ska, and original style straight outta the wild west that is India. A literal and figurative portrayal of life in the wild
+
+						one more:
+						Wet Cigarette is a punk band from Victora, BC, Canada. They began their career at the Blackwater Pistol Club and started as a six-piece in 2012. Their sound is heavily influenced by hardcore punk. Their songs include "Strike A Bitch," "F--- Dirty," "Indecent," and "International Googly Moogly." The band is also known for their lyrical content, especially the infamous lines such as "Shout out to the dumber zebras." The band decided to embark on a more bass-heavy and punk-influenced direction as their "comeback" and last effort, 2013's Disappointing Aneurysm. Today, they are working on their third full-length album.
+
+						Thats all
+
+						Thank you for reading. Please call me at my number five one 8 (956) (itsALongDistanceNumbrer) 23 seven zero :)
+
+
+
+					</p>
 				</article>
 			</div>
 		</div>
