--- a/index.htm
+++ b/index.htm
@@ -63,8 +63,8 @@
 
 						Starting in October 2012 the band released their debut album Smoke With Fire. A blistering 5-track affair with a thick crust crusty crustcore crust and equal parts race car, Marcellus Jackson, and modern metal, original-black-metal inspired vocals, jarring country charm, fuzzy riffs and dramatic rock and roll rhythms, as well as some nod to folk, ska, and original style straight outta the wild west that is India. A literal and figurative portrayal of life in the wild
 
-						one more:
-						Wet Cigarette is a punk band from Victora, BC, Canada. They began their career at the Blackwater Pistol Club and started as a six-piece in 2012. Their sound is heavily influenced by hardcore punk. Their songs include "Strike A Bitch," "F--- Dirty," "Indecent," and "International Googly Moogly." The band is also known for their lyrical content, especially the infamous lines such as "Shout out to the dumber zebras." The band decided to embark on a more bass-heavy and punk-influenced direction as their "comeback" and last effort, 2013's Disappointing Aneurysm. Today, they are working on their third full-length album.
+						
+						Wet Cigarette is a punk band from Victora, BC, Canada. They began their career at the Blackwater Pistol Club and started as a six-piece in 2012. Their sound is heavily influenced by hardcore punk. Their songs include "badeblades saved my life" "big beans" "FRANK BAMBINO" and "International Googly Moogly." The band is also known for their lyrical content, especially the infamous lines such as "Shout out to the dumber zebras." The band decided to embark on a more bass-heavy and punk-influenced direction as their "comeback" and last effort, 2013's Disappointing Aneurysm. Today, they are working on their third full-length album.
 
 						Thats all
 
